--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.10.0",
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
