--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
+    "base-64": "^1.0.0",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
