--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "base-64": "^1.0.0",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "mpesa-hash-decoder": "^1.0.1",
     "nodemon": "^3.1.10"
   }
 }
